--- a/tasks-interface/src/app/register/register.component.html
+++ b/tasks-interface/src/app/register/register.component.html
@@ -1,1 +1,23 @@
-<p>register works!</p>
+<form [formGroup]="registerForm" (ngSubmit)="register()" class="login-form">
+  <mat-form-field>
+    <mat-label>Firstname</mat-label>
+    <input matInput formControlName="firstname"/>
+  </mat-form-field>
+
+  <mat-form-field>
+    <mat-label>Lastname</mat-label>
+    <input matInput formControlName="lastname"/>
+  </mat-form-field>
+
+  <mat-form-field>
+    <mat-label>Email</mat-label>
+    <input matInput formControlName="email"/>
+  </mat-form-field>
+
+  <mat-form-field>
+    <mat-label>Password</mat-label>
+    <input matInput type="password" formControlName="password"/>
+  </mat-form-field>
+  <button mat-raised-button type="submit" color="primary">Register</button>
+</form>
+
