--- a/tasks-interface/src/app/login/login.component.html
+++ b/tasks-interface/src/app/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="login-container">
   <div class="login">
     <form class ="login-form" [formGroup]="loginForm" (ngSubmit)="login()" class="login-form">
-
+      <h1>Login</h1>
       <mat-form-field>
         <mat-label>Email</mat-label>
         <input matInput formControlName="email"/>
