--- a/tasks-interface/src/app/register/register.component.css
+++ b/tasks-interface/src/app/register/register.component.css
@@ -1,5 +1,21 @@
-:host {
+.register-container {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
+}
+
+.register {
+  color: white;
+  background-color: cadetblue;
+  height: 450px;
+  width: 250px;
+  margin: 20px;
+  border-radius: 20px;
+}
+
+.register-form {
+  margin: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
