--- a/tasks-interface/src/app/app.component.html
+++ b/tasks-interface/src/app/app.component.html
@@ -1,5 +1,13 @@
-<app-header></app-header>
+<div class="layout-container">
+  <div class="header">
+    <app-header></app-header>
+  </div>
+  <div class="content">
+    <router-outlet></router-outlet>
+  </div>
+</div>
 
-<router-outlet></router-outlet>
+
+
 
 
