--- a/tasks-interface/src/app/task-form/task-form.component.html
+++ b/tasks-interface/src/app/task-form/task-form.component.html
@@ -1,1 +1,37 @@
-<p>task-form works!</p>
+<div class="task-container">
+  <div class="task">
+    <form [formGroup]="taskForm" (ngSubmit)="create()" class="task-form">
+      <h1>Create Task</h1>
+      <mat-form-field>
+        <mat-label>To Do</mat-label>
+        <input matInput formControlName="toDo"/>
+      </mat-form-field>
+
+      <mat-form-field>
+        <mat-label>Status</mat-label>
+        <input matInput formControlName="status"/>
+      </mat-form-field>
+
+      <mat-form-field>
+        <mat-label>Username</mat-label>
+        <mat-select [(ngModel)]="username" [ngModelOptions]="{standalone: true}">
+          <mat-option *ngFor="let type of userList" [value]="type">
+            {{type.firstname}}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+
+      <mat-form-field appearance="fill">
+        <mat-label>Begin</mat-label>
+        <input matInput placeholder="YYYY-MM-DD" name="beginDate" [(ngModel)]="beginDate" [ngModelOptions]="{standalone: true}">
+      </mat-form-field>
+
+      <mat-form-field appearance="fill">
+        <mat-label>Completed</mat-label>
+        <input matInput placeholder="YYYY-MM-DD" name="completedDate" [(ngModel)]="completedDate" [ngModelOptions]="{standalone: true}">
+      </mat-form-field>
+
+      <button mat-raised-button type="submit" color="primary">Create</button>
+    </form>
+  </div>
+</div>
