--- a/tasks-interface/src/app/header/header.component.html
+++ b/tasks-interface/src/app/header/header.component.html
@@ -2,7 +2,8 @@
   <div class="header">
     <h1>Tasks</h1>
     <button mat-button (click)="demo()">demo</button>
-    <button mat-button routerLink="/task">demo</button>
+    <button mat-button routerLink="/task">Form</button>
+    <button mat-button routerLink="/task-list">List</button>
     {{responseSaved}}
   </div>
 </div>
