--- a/tasks-interface/src/app/header/header.component.html
+++ b/tasks-interface/src/app/header/header.component.html
@@ -1,9 +1,7 @@
 <div class="header-container">
   <div class="header">
     <h1>Tasks</h1>
-    <button mat-button (click)="demo()">demo</button>
-    <button mat-button routerLink="/task">Form</button>
-    <button mat-button routerLink="/task-list">List</button>
-    {{responseSaved}}
+    <button mat-button (click)="logout()">Logout</button>
+    <button mat-button routerLink="/task-list">Tasks</button>
   </div>
 </div>
