--- a/tasks-interface/src/app/task-list/task-list.component.html
+++ b/tasks-interface/src/app/task-list/task-list.component.html
@@ -1,8 +1,9 @@
 <mat-form-field>
   <mat-label>Enter serial number</mat-label>
   <input matInput [(ngModel)]="keyword" [ngModelOptions]="{standalone: true}"/>
-  <button mat-raised-button (click)="search()" type="submit" color="primary">Search</button>
+
 </mat-form-field>
+<button mat-raised-button (click)="search()" type="submit" color="primary">Search</button>
 <div *ngFor="let result of searchResult">
 
 </div>
@@ -10,7 +11,7 @@
 <div class="containerList">
 
 
-  <button mat-mini-fab color="accent" routerLink="/intervention-sheet"
+  <button mat-mini-fab color="accent" routerLink="/task"
           aria-label="Example icon button with a plus one icon">
 
     <mat-icon>plus_one</mat-icon>
@@ -38,12 +39,12 @@
         <td mat-cell *matCellDef="let element"> {{element.username}} </td>
       </ng-container>
 
-      <ng-container matColumnDef="dateOfIntervention">
+      <ng-container matColumnDef="beginDate">
         <th mat-header-cell *matHeaderCellDef>Begin Date</th>
         <td mat-cell *matCellDef="let element"> {{element.beginDate}} </td>
       </ng-container>
 
-      <ng-container matColumnDef="dateOfIntervention">
+      <ng-container matColumnDef="completedDate">
         <th mat-header-cell *matHeaderCellDef>Completed Date</th>
         <td mat-cell *matCellDef="let element"> {{element.completedDate}} </td>
       </ng-container>
@@ -68,7 +69,7 @@
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
 
-    <mat-paginator [pageSizeOptions]="[10, 20, 30]"
+    <mat-paginator [pageSizeOptions]="[5, 10, 20, 30]"
                    showFirstLastButtons
                    aria-label="Select page of periodic elements">
     </mat-paginator>
