--- a/tasks-interface/src/app/task-list/task-list.component.html
+++ b/tasks-interface/src/app/task-list/task-list.component.html
@@ -49,21 +49,23 @@
         <td mat-cell *matCellDef="let element"> {{element.completedDate}} </td>
       </ng-container>
 
-<!--      <ng-container matColumnDef="delete">-->
-<!--        <th mat-header-cell *matHeaderCellDef>Delete</th>-->
-<!--        <td mat-cell *matCellDef="let element">-->
-<!--          <button mat-fab color="warn" aria-label="Example icon button with a delete icon" (click)="">-->
-<!--            <mat-icon>delete</mat-icon>-->
-<!--          </button>-->
-<!--        </td>-->
-<!--      </ng-container>-->
-<!--      <ng-container matColumnDef="update">-->
-<!--        <th mat-header-cell *matHeaderCellDef>Update</th>-->
-<!--        <td mat-cell *matCellDef="let element">-->
-<!--          <a routerLink="/intervention-sheet/{{element.id}}">-->
-<!--            <button mat-raised-button>Edit</button>-->
-<!--          </a>-->
-<!--      </ng-container>-->
+      <ng-container matColumnDef="update">
+        <th mat-header-cell *matHeaderCellDef>Update</th>
+        <td mat-cell *matCellDef="let element">
+          <a routerLink="/task/{{element.id}}">
+            <button mat-raised-button>Edit</button>
+          </a>
+      </ng-container>
+
+      <ng-container matColumnDef="delete">
+        <th mat-header-cell *matHeaderCellDef>Delete</th>
+        <td mat-cell *matCellDef="let element">
+          <button mat-fab color="warn" aria-label="Example icon button with a delete icon" (click)="delete(element)">
+            <mat-icon>delete</mat-icon>
+          </button>
+        </td>
+      </ng-container>
+
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
