--- a/tasks-interface/src/app/header/header.component.html
+++ b/tasks-interface/src/app/header/header.component.html
@@ -2,6 +2,7 @@
   <div class="header">
     <h1>Tasks</h1>
     <button mat-button (click)="logout()">Logout</button>
-    <button mat-button routerLink="/task-list">Tasks</button>
+    <button mat-button routerLink="/task-list">All Tasks</button>
+    <button mat-button routerLink="/dashboard">My Tasks</button>
   </div>
 </div>
