--- a/tasks-interface/src/app/task-list/task-list.component.html
+++ b/tasks-interface/src/app/task-list/task-list.component.html
@@ -1,26 +1,12 @@
 <div>
-<<<<<<< HEAD
-  <div class="search">
-    <form (ngSubmit)="search()">
-    <mat-form-field>
-      <mat-label>Enter keyword</mat-label>
-      <input matInput [(ngModel)]="keyword" [ngModelOptions]="{standalone: true}"/>
-    </mat-form-field>
-    <button mat-raised-button type="submit" color="primary">Search</button>
-    </form>
-    <div *ngFor="let result of searchResult">
-
-=======
   <form (submit)="search()">
     <div class="search">
       <mat-form-field>
         <mat-label>Search</mat-label>
         <input matInput [(ngModel)]="keyword" [ngModelOptions]="{standalone: true}"/>
       </mat-form-field>
-<!--      <button mat-raised-button (click)="search()" type="submit" color="primary">Search</button>-->
       <div *ngFor="let result of searchResult">
       </div>
->>>>>>> c1242947bd391a08097fa67f5dd03bb68d89a96b
     </div>
   </form>
 </div>
@@ -76,7 +62,8 @@
       <ng-container matColumnDef="delete">
         <th mat-header-cell *matHeaderCellDef>Delete</th>
         <td mat-cell *matCellDef="let element">
-          <button mat-fab color="warn" aria-label="Example icon button with a delete icon" (click)="delete(element)">
+          <button mat-fab color="warn" aria-label="Example icon button with a delete icon"
+                  (click)="delete(element)">
             <mat-icon>delete</mat-icon>
           </button>
         </td>
@@ -87,9 +74,10 @@
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
 
-    <mat-paginator [pageSizeOptions]="[5, 10, 20, 30]"
+    <mat-paginator [pageSizeOptions]="[10, 20, 30]"
                    showFirstLastButtons
                    aria-label="Select page of periodic elements">
     </mat-paginator>
   </div>
 </div>
+
