--- a/tasks-interface/src/app/task-list/task-list.component.html
+++ b/tasks-interface/src/app/task-list/task-list.component.html
@@ -11,73 +11,74 @@
   </form>
 </div>
 
+<div class="container">
+  <div class="container-list">
+    <div class="add-button">
+    <button mat-mini-fab color="accent" routerLink="/task"
+            aria-label="Example icon button with a plus one icon">
+      <mat-icon>plus_one</mat-icon>
+    </button>
+    </div>
+    <div class="mat-elevation-z8">
+      <table mat-table [dataSource]="dataSource2">
 
-<div class="containerList">
-  <button mat-mini-fab color="accent" routerLink="/task"
-          aria-label="Example icon button with a plus one icon">
+        <ng-container matColumnDef="id">
+          <th mat-header-cell *matHeaderCellDef>No.</th>
+          <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+        </ng-container>
 
-    <mat-icon>plus_one</mat-icon>
-  </button>
-  <div class="mat-elevation-z8">
-    <table mat-table [dataSource]="dataSource2">
+        <ng-container matColumnDef="toDo">
+          <th mat-header-cell *matHeaderCellDef>To Do</th>
+          <td mat-cell *matCellDef="let element"> {{element.toDo}} </td>
+        </ng-container>
 
-      <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef>No.</th>
-        <td mat-cell *matCellDef="let element"> {{element.id}} </td>
-      </ng-container>
+        <ng-container matColumnDef="status">
+          <th mat-header-cell *matHeaderCellDef>Status</th>
+          <td mat-cell *matCellDef="let element"> {{element.status}} </td>
+        </ng-container>
 
-      <ng-container matColumnDef="toDo">
-        <th mat-header-cell *matHeaderCellDef>To Do</th>
-        <td mat-cell *matCellDef="let element"> {{element.toDo}} </td>
-      </ng-container>
+        <ng-container matColumnDef="user">
+          <th mat-header-cell *matHeaderCellDef>User</th>
+          <td mat-cell *matCellDef="let element"> {{element.username}} </td>
+        </ng-container>
 
-      <ng-container matColumnDef="status">
-        <th mat-header-cell *matHeaderCellDef>Status</th>
-        <td mat-cell *matCellDef="let element"> {{element.status}} </td>
-      </ng-container>
+        <ng-container matColumnDef="beginDate">
+          <th mat-header-cell *matHeaderCellDef>Begin Date</th>
+          <td mat-cell *matCellDef="let element"> {{element.beginDate}} </td>
+        </ng-container>
 
-      <ng-container matColumnDef="user">
-        <th mat-header-cell *matHeaderCellDef>User</th>
-        <td mat-cell *matCellDef="let element"> {{element.username}} </td>
-      </ng-container>
+        <ng-container matColumnDef="completedDate">
+          <th mat-header-cell *matHeaderCellDef>Completed Date</th>
+          <td mat-cell *matCellDef="let element"> {{element.completedDate}} </td>
+        </ng-container>
 
-      <ng-container matColumnDef="beginDate">
-        <th mat-header-cell *matHeaderCellDef>Begin Date</th>
-        <td mat-cell *matCellDef="let element"> {{element.beginDate}} </td>
-      </ng-container>
+        <ng-container matColumnDef="update">
+          <th mat-header-cell *matHeaderCellDef>Update</th>
+          <td mat-cell *matCellDef="let element">
+            <a routerLink="/task/{{element.id}}">
+              <button mat-raised-button>Edit</button>
+            </a>
+        </ng-container>
 
-      <ng-container matColumnDef="completedDate">
-        <th mat-header-cell *matHeaderCellDef>Completed Date</th>
-        <td mat-cell *matCellDef="let element"> {{element.completedDate}} </td>
-      </ng-container>
-
-      <ng-container matColumnDef="update">
-        <th mat-header-cell *matHeaderCellDef>Update</th>
-        <td mat-cell *matCellDef="let element">
-          <a routerLink="/task/{{element.id}}">
-            <button mat-raised-button>Edit</button>
-          </a>
-      </ng-container>
-
-      <ng-container matColumnDef="delete">
-        <th mat-header-cell *matHeaderCellDef>Delete</th>
-        <td mat-cell *matCellDef="let element">
-          <button mat-fab color="warn" aria-label="Example icon button with a delete icon"
-                  (click)="delete(element)">
-            <mat-icon>delete</mat-icon>
-          </button>
-        </td>
-      </ng-container>
+        <ng-container matColumnDef="delete">
+          <th mat-header-cell *matHeaderCellDef>Delete</th>
+          <td mat-cell *matCellDef="let element">
+            <button mat-fab color="warn" aria-label="Example icon button with a delete icon"
+                    (click)="delete(element)">
+              <mat-icon>delete</mat-icon>
+            </button>
+          </td>
+        </ng-container>
 
 
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
 
-    <mat-paginator [pageSizeOptions]="[10, 20, 30]"
-                   showFirstLastButtons
-                   aria-label="Select page of periodic elements">
-    </mat-paginator>
+      <mat-paginator [pageSizeOptions]="[10, 20, 30]"
+                     showFirstLastButtons
+                     aria-label="Select page of periodic elements">
+      </mat-paginator>
+    </div>
   </div>
 </div>
-
