--- a/tasks-interface/src/app/task-list/task-list.component.css
+++ b/tasks-interface/src/app/task-list/task-list.component.css
@@ -11,10 +11,16 @@ td, th {
   width: 25%;
 }
 
-.search {
-  width: 50%;
+
+
+.form-row {
   display: flex;
+  gap: 16px; /* Spatiu între câmpuri */
   align-items: center;
+}
+
+mat-form-field {
+  flex: 1; /* Ajustează lățimea câmpurilor după nevoi */
 }
 
 .container {
