--- a/tasks-interface/src/app/task-list/task-list.component.html
+++ b/tasks-interface/src/app/task-list/task-list.component.html
@@ -1,28 +1,27 @@
-<div class="search">
-  <div >
-    <form (submit)="search()">
+<div>
+  <div>
+    <form (submit)="search()" class="form-row">
       <mat-form-field>
         <mat-label>Search</mat-label>
         <input matInput [(ngModel)]="keyword" [ngModelOptions]="{standalone: true}"/>
       </mat-form-field>
 
-      <mat-form-field>
+      <mat-form-field class="example-full-width">
         <mat-label>Choose a date</mat-label>
         <input matInput [matDatepicker]="picker" [(ngModel)]="selectedDate" name="selectedDate">
         <mat-hint>MM/DD/YYYY</mat-hint>
         <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
-        <mat-datepicker #picker></mat-datepicker>
+        <mat-datepicker touchUi #picker></mat-datepicker>
       </mat-form-field>
-      <div>
-        <button mat-flat-button (click)="saveDate()">Search</button>
-      </div>
+
+      <button mat-flat-button (click)="saveDate()">Search</button>
+
 
       <div *ngFor="let result of searchResult">
       </div>
 
     </form>
   </div>
-
 </div>
 
 <div class="container">
@@ -38,32 +37,32 @@
 
         <ng-container matColumnDef="id">
           <th mat-header-cell *matHeaderCellDef>No.</th>
-          <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+          <td mat-cell *matCellDef="let element"> {{ element.id }}</td>
         </ng-container>
 
         <ng-container matColumnDef="toDo">
           <th mat-header-cell *matHeaderCellDef>To Do</th>
-          <td mat-cell *matCellDef="let element"> {{element.toDo}} </td>
+          <td mat-cell *matCellDef="let element"> {{ element.toDo }}</td>
         </ng-container>
 
         <ng-container matColumnDef="status">
           <th mat-header-cell *matHeaderCellDef>Status</th>
-          <td mat-cell *matCellDef="let element"> {{element.status}} </td>
+          <td mat-cell *matCellDef="let element"> {{ element.status }}</td>
         </ng-container>
 
         <ng-container matColumnDef="user">
           <th mat-header-cell *matHeaderCellDef>User</th>
-          <td mat-cell *matCellDef="let element"> {{element.username}} </td>
+          <td mat-cell *matCellDef="let element"> {{ element.username }}</td>
         </ng-container>
 
         <ng-container matColumnDef="beginDate">
           <th mat-header-cell *matHeaderCellDef>Begin Date</th>
-          <td mat-cell *matCellDef="let element"> {{element.beginDate}} </td>
+          <td mat-cell *matCellDef="let element"> {{ element.beginDate }}</td>
         </ng-container>
 
         <ng-container matColumnDef="completedDate">
           <th mat-header-cell *matHeaderCellDef>Completed Date</th>
-          <td mat-cell *matCellDef="let element"> {{element.completedDate}} </td>
+          <td mat-cell *matCellDef="let element"> {{ element.completedDate }}</td>
         </ng-container>
 
         <ng-container matColumnDef="update">
