--- a/tasks-interface/src/app/task-list/task-list.component.html
+++ b/tasks-interface/src/app/task-list/task-list.component.html
@@ -16,7 +16,7 @@
 
       <button mat-flat-button (click)="saveDate()">Search</button>
 
-
+      <app-pop-up-task *ngIf="isModalOpen" [item]="selectedItem" (close)="closeModal()"></app-pop-up-task>
       <div *ngFor="let result of searchResult">
       </div>
 
@@ -73,6 +73,14 @@
             </a>
         </ng-container>
 
+        <ng-container matColumnDef="view">
+          <th mat-header-cell *matHeaderCellDef>View</th>
+          <td mat-cell *matCellDef="let element">
+            <a>
+              <button mat-raised-button (click)="openModal(element)">View</button>
+            </a>
+        </ng-container>
+
         <ng-container matColumnDef="delete">
           <th mat-header-cell *matHeaderCellDef>Delete</th>
           <td mat-cell *matCellDef="let element">
@@ -95,3 +103,5 @@
     </div>
   </div>
 </div>
+
+
