am facut modala si pentru dashboard

--- a/tasks-interface/src/app/task-list/task-list.component.css
+++ b/tasks-interface/src/app/task-list/task-list.component.css
@@ -1,41 +1,41 @@
-table {
-  width: 100%;
-}
+/*table {*/
+/*  width: 100%;*/
+/*}*/
 
-.mat-mdc-form-field {
-  font-size: 14px;
-  width: 70%;
-}
+/*.mat-mdc-form-field {*/
+/*  font-size: 14px;*/
+/*  width: 70%;*/
+/*}*/
 
-td, th {
-  width: 25%;
-}
+/*td, th {*/
+/*  width: 25%;*/
+/*}*/
 
 
 
-.form-row {
-  display: flex;
-  gap: 16px; /* Spatiu între câmpuri */
-  align-items: center;
-}
+/*.form-row {*/
+/*  display: flex;*/
+/*  gap: 16px; !* Spatiu între câmpuri *!*/
+/*  align-items: center;*/
+/*}*/
 
-mat-form-field {
-  flex: 1; /* Ajustează lățimea câmpurilor după nevoi */
-}
+/*mat-form-field {*/
+/*  flex: 1; !* Ajustează lățimea câmpurilor după nevoi *!*/
+/*}*/
 
-.container {
+/*.container {*/
 
-}
+/*}*/
 
-.container-list {
-width: 100%;
-}
+/*.container-list {*/
+/*width: 100%;*/
+/*}*/
 
-.add-button {
+/*.add-button {*/
 
-}
+/*}*/
 
-.example-button-row {
-  display: table-cell;
-  max-width: 600px;
-}
+/*.example-button-row {*/
+/*  display: table-cell;*/
+/*  max-width: 600px;*/
+/*}*/
