--- a/tasks-interface/src/app/dashboard/dashboard.component.html
+++ b/tasks-interface/src/app/dashboard/dashboard.component.html
@@ -16,6 +16,8 @@
 
       <button mat-flat-button (click)="saveDate()">Search</button>
 
+      <app-pop-up-task *ngIf="isModalOpen" [item]="selectedItem" (close)="closeModal()"></app-pop-up-task>
+
       <div *ngFor="let result of searchResult">
       </div>
 
@@ -23,8 +25,6 @@
   </div>
 </div>
 <div class="containerList">
-
-
   <button mat-mini-fab color="accent" routerLink="/task"
           aria-label="Example icon button with a plus one icon">
 
@@ -35,32 +35,40 @@
 
       <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef>No.</th>
-        <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+        <td mat-cell *matCellDef="let element"> {{ element.id }}</td>
       </ng-container>
 
       <ng-container matColumnDef="toDo">
         <th mat-header-cell *matHeaderCellDef>To Do</th>
-        <td mat-cell *matCellDef="let element"> {{element.toDo}} </td>
+        <td mat-cell *matCellDef="let element"> {{ element.toDo }}</td>
       </ng-container>
 
       <ng-container matColumnDef="status">
         <th mat-header-cell *matHeaderCellDef>Status</th>
-        <td mat-cell *matCellDef="let element"> {{element.status}} </td>
+        <td mat-cell *matCellDef="let element"> {{ element.status }}</td>
       </ng-container>
 
       <ng-container matColumnDef="user">
         <th mat-header-cell *matHeaderCellDef>User</th>
-        <td mat-cell *matCellDef="let element"> {{element.username}} </td>
+        <td mat-cell *matCellDef="let element"> {{ element.username }}</td>
       </ng-container>
 
       <ng-container matColumnDef="beginDate">
         <th mat-header-cell *matHeaderCellDef>Begin Date</th>
-        <td mat-cell *matCellDef="let element"> {{element.beginDate}} </td>
+        <td mat-cell *matCellDef="let element"> {{ element.beginDate }}</td>
       </ng-container>
 
       <ng-container matColumnDef="completedDate">
         <th mat-header-cell *matHeaderCellDef>Completed Date</th>
-        <td mat-cell *matCellDef="let element"> {{element.completedDate}} </td>
+        <td mat-cell *matCellDef="let element"> {{ element.completedDate }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="view">
+        <th mat-header-cell *matHeaderCellDef>View</th>
+        <td mat-cell *matCellDef="let element">
+          <a>
+            <button mat-raised-button (click)="openModal(element)">View</button>
+          </a>
       </ng-container>
 
       <ng-container matColumnDef="update">
