am facut dropdown pentru status si am adaugat bubton de cancel pentru form

--- a/tasks-interface/src/app/task-form/task-form.component.html
+++ b/tasks-interface/src/app/task-form/task-form.component.html
@@ -2,7 +2,10 @@
 
   <div class="task">
     <form [formGroup]="taskForm" (ngSubmit)="create()" class="task-form">
-      <h1>Create Task</h1>
+      <h1 *ngIf="toDo">Update Task</h1>
+      <h1 *ngIf="!toDo">Create Task</h1>
+
+
       <mat-form-field>
         <mat-label>To Do</mat-label>
         <input matInput [(ngModel)]="toDo" [ngModelOptions]="{standalone: true}" />
@@ -10,7 +13,11 @@
 
       <mat-form-field>
         <mat-label>Status</mat-label>
-        <input matInput [(ngModel)]="status" [ngModelOptions]="{standalone: true}"/>
+        <mat-select [(ngModel)]="status" [ngModelOptions]="{standalone: true}">
+          <mat-option value="PENDING">PENDING</mat-option>
+          <mat-option value="InPROGRESS">InPROGRESS</mat-option>
+          <mat-option value="COMPLETED">COMPLETED</mat-option>
+        </mat-select>
       </mat-form-field>
 
       <mat-form-field>
@@ -39,7 +46,10 @@
         <mat-datepicker touchUi #picker2></mat-datepicker>
       </mat-form-field>
 
-      <button mat-raised-button (click)="saveDate12()" type="submit" color="primary">Create</button>
+      <button mat-raised-button *ngIf="!toDo" (click)="saveDate12()" type="submit" color="primary">Create</button>
+      <button mat-raised-button *ngIf="toDo" (click)="saveDate12()" type="submit" color="primary">Update</button>
+      <button mat-raised-button *ngIf="userId" routerLink="/dashboard" color="warn">Cancel</button>
+      <button mat-raised-button *ngIf="!userId" routerLink="/task-list" color="warn">Cancel</button>
     </form>
   </div>
 </div>
