--- a/tasks-interface/src/app/app.component.html
+++ b/tasks-interface/src/app/app.component.html
@@ -1,8 +1,8 @@
-<div class="layout-container">
-  <div class="header">
+<div>
+  <div>
     <app-header></app-header>
   </div>
-  <div class="content">
+  <div>
     <router-outlet></router-outlet>
   </div>
 </div>
