--- a/tasks-interface/src/app/task-form/task-form.component.html
+++ b/tasks-interface/src/app/task-form/task-form.component.html
@@ -32,7 +32,7 @@
 
       <mat-form-field class="example-full-width">
         <mat-label>Begin Date</mat-label>
-        <input matInput [matDatepicker]="picker"  [(ngModel)]="selectedDate" [ngModelOptions]="{standalone: true}" name="selectedDate">
+        <input matInput [matDatepicker]="picker"  [(ngModel)]="beginDate" [ngModelOptions]="{standalone: true}" name="selectedDate">
         <mat-hint>MM/DD/YYYY</mat-hint>
         <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
         <mat-datepicker touchUi #picker></mat-datepicker>
@@ -40,7 +40,7 @@
 
       <mat-form-field class="example-full-width">
         <mat-label>Completed Date</mat-label>
-        <input matInput [matDatepicker]="picker2"  [(ngModel)]="selectedDate2" [ngModelOptions]="{standalone: true}" name="selectedDate2">
+        <input matInput [matDatepicker]="picker2"  [(ngModel)]="completedDate" [ngModelOptions]="{standalone: true}" name="selectedDate2">
         <mat-hint>MM/DD/YYYY</mat-hint>
         <mat-datepicker-toggle matIconSuffix [for]="picker2"></mat-datepicker-toggle>
         <mat-datepicker touchUi #picker2></mat-datepicker>
