--- a/tasks-interface/src/styles.css
+++ b/tasks-interface/src/styles.css
@@ -1,6 +1,12 @@
-/* You can add global styles to this file, and also import other style files */
+ /*You can add global styles to this file, and also import other style files*/
 
-html, body { height: 100%; }
+html, body {
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+
+}
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 .all {
@@ -10,3 +16,9 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   background-size: cover;
   background-attachment: fixed;
 }
+
+ * {
+   margin: 0;
+   padding: 0;
+   box-sizing: border-box;
+ }
