--- a/tasks-interface/src/styles.css
+++ b/tasks-interface/src/styles.css
@@ -11,7 +11,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 .all {
   /*background: #90f1ca;*/
-  background-image: url("/assets/background.jpg");
+  background-image: url("/assets/Background.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
