--- a/tasks-interface/src/app/header/header.component.css
+++ b/tasks-interface/src/app/header/header.component.css
@@ -1,8 +1,28 @@
 .header-container{
-  height: 100%;
-  background-color: cadetblue;
+  margin-top: 25px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .header {
-  color: white;
+  border-radius: 20px;
+  color: #333333;
+  width: 50%;
+  background-color: rgba(245, 245, 245, 0.7);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  font-family: Arial, sans-serif;
+  display: flex;
+  justify-content: right;
+  align-items: center;
+  padding: 10px;
+}
+
+.buttons {
+  color: #333333;
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding: 10px;
 }
