--- a/tasks-interface/src/app/register/register.component.css
+++ b/tasks-interface/src/app/register/register.component.css
@@ -1,15 +1,23 @@
 .register-container {
+  margin-top: 200px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  border-radius: 20px;
 }
 
 .register {
-  color: white;
-  background-color: cadetblue;
+  background-color: rgba(245, 245, 245, 0.7);
+  border: 1px solid #ddd;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+  font-family: Arial, sans-serif;
+  color: #333;
+  /*opacity: 0.9;*/
+  width: 300px;
   height: 450px;
-  width: 250px;
-  margin: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   border-radius: 20px;
 }
 
