--- a/tasks-interface/src/app/dashboard/dashboard.component.css
+++ b/tasks-interface/src/app/dashboard/dashboard.component.css
@@ -16,6 +16,7 @@ td, th {
 }
 
 .form-row {
+  margin: 30px;
   display: flex;
   gap: 16px; /* Spatiu între câmpuri */
   align-items: center;
@@ -23,6 +24,10 @@ td, th {
 
 mat-form-field {
   flex: 1; /* Ajustează lățimea câmpurilor după nevoi */
+}
+
+.container {
+  margin: 30px;
 }
 
 
